[package]
name = "dadbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
#serenity = "0.11.5"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
#tokio = { version = "1", features = ["full"] }
rand = "0.8.4"
